[smita]Added:API to add topic
