# src/routes/index.js
@@ -2,6 +2,7 @@ import express from 'express';
 const router = express.Router();
 
 import userRoute from './user.route';
+import topic from './topic.route'
 /**
  * Function contains Application routes
  *
@@ -12,7 +13,7 @@ const routes = () => {
     res.json('Welcome');
   });
   router.use('/users', userRoute);
-
+  router.use('/topics', topic);
   return router;
 };
 
